no spacing issues found please re open when some are found this fixes #7

--- a/MockUp/index.css
+++ b/MockUp/index.css
@@ -6,7 +6,7 @@ html {
 #Logo {
    width: auto;
    height: 125px;
-   padding: 2px;
+   padding: 4px;
 }
 
 p {
